--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.1",
+    "multer": "^1.4.2",
+    "multer-azure-storage": "^0.2.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
